# KW5

./: README.md  main.py  pyproject.toml
src/: DBManager.py  api.py  database.ini  queries.sql  utils.py  vacancy.py
