[tool.poetry]
name = "kw5"
version = "0.1.0"
description = ""
authors = ["irinasiur <drozdovairina10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"
configparser = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



